name:                android-helm-space-invaders
version:             0.1.0.0
synopsis:            Helm version of Space Invaders for Android
description:         Please see README.md
homepage:            https://github.com/githubuser/helm-space-invaders#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Greif, Sean Seefried
maintainer:          sean.seefried@gmail.com
copyright:           2016 Alex Greif
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag android
  Description: Build for Android
  Default: False

library
    hs-source-dirs: app
    Exposed-modules: AndroidMain, Game
    default-language: Haskell2010
    if flag(android)
      ghc-options: -O2 -static
      Buildable: True
      build-depends: base >= 4.7.0.0
                   , SDL2 == 0.1.0
                   , cairo == 0.13.0.5
                   , elerea
                   , helm
    else
      buildable: False

executable space-invaders
  hs-source-dirs: app
  main-is: Main.hs
  other-modules: Game
  default-language: Haskell2010
  ghc-options: -O2 -threaded -rtsopts -Wall
  build-depends: base
               , cairo
               , elerea
               , helm
  if flag(android)
    Buildable: False
  else
    Buildable: True

